--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -65,4 +65,5 @@
         .tweet-text
           = auto_link(tweet.text, html: {target: 'blank'})
         .tweet-age
+          %span &#124;
           = "#{time_ago_in_words(tweet.twitter_created_at)} old".capitalize
