--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -84,8 +84,8 @@
         display: inline;
       }
     }
-    .musing-text {
-      color: $musing-text-color;
+    .musing-apply-link {
+      text-align: center;
     }
     .tweet-age {
       font-style: italic;
