--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,3 +19,8 @@
     %p.alert
       = alert
     = yield
+    %footer
+      %h4
+        %a{href: "http://www.jasonbanks.io", target: "_blank", class: "special-link"}
+          Jason Banks 
+        designed and built this, principally to benefit himself.
