--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -14,15 +14,11 @@
     %h5.mobile-no-show *Below are the most recent 300 of all results (an archive listing of all is forthcoming), and favors results from following over those from searching.
     #color-key
       %h3 Color Key
-      #color-key-new.color-key-div
-        .color-div#new
-        %span
-          New
       #color-key-junior.color-key-div
         .color-div#junior
         %span
           Mention Junior/Jr/Internship/Entry Level
-      %br#color-key-break
+      %br.color-key-break
       #color-key-friend.color-key-div
         .color-div#by-friend-1
         .color-div#by-friend-2
@@ -35,6 +31,13 @@
         .color-div#by-stranger-3
         %span
           From searching
+      %br.color-key-break
+      #color-key-musing.color-key-div
+        .color-div#musing
+        %span
+          From
+          %a{href: "https://www.themuse.com/", target: "_blank", class: "special-link"}
+            The Muse
     %br
     #filters-container
       %h3 Filters (most frequent useful hashtags and other concerns)
@@ -43,8 +46,8 @@
           all
         %button{data: {filter: ".junior"}}
           junior
-        %button{data: {filter: ".new-tweet"}}
-          new
+        %button{data: {filter: ".musing"}}
+          muse
         %button{data: {filter: ".followed"}}
           followed
         %button{data: {filter: ".searched"}}
