--- a/app/views/tweets/_musing.html.haml
+++ b/app/views/tweets/_musing.html.haml
@@ -1,6 +1,6 @@
 %div{class: "isotope-tweet tweet-hex-musing junior musing"}
   .tweet-contents
-    .tweeter-avatar
+    .musing-company-logo
       = image_tag musing.company_logo
     .tweeter-handle.musing-company-name
       = musing_company_url(musing.company_name)
