Tweak wording in index view.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -9,7 +9,7 @@
         Tweets
   #notices-etc
     %h5 *Updates hourly.
-    %h5.mobile-no-show *No guarantee that any of the  below pertain to dev jobs (but, c'mon, they mostly do)&#8212;an exhaustive search of Twitter is neither permitted nor possible.
+    %h5.mobile-no-show *No guarantee that any of the  below pertain to dev jobs or that all the dev jobs have been found (c'mon).
     %h5 *Search parameters emphasize junior ruby/rails roles
     %h5.mobile-no-show *Below are the most recent 300 of all results (an archive listing of all is forthcoming), and favors results from following over those from searching.
     #color-key
@@ -47,7 +47,7 @@
         %button{data: {filter: ".junior"}}
           junior
         %button{data: {filter: ".musing"}}
-          muse
+          the muse
         %button{data: {filter: ".followed"}}
           followed
         %button{data: {filter: ".searched"}}
