Tweak wording in header.

--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -8,10 +8,15 @@
         %br
         Tweets
   #notices-etc
-    %h5 *Updates hourly.
+    %h5
+      *Searches Twitter and 
+      %a{href: "https://www.themuse.com/", target: "_blank", class: "special-link"}
+        The Muse 
+      for developer jobs.
+    %h5 *Updates from Twitter hourly and The Muse weekly.
     %h5.mobile-no-show *No guarantee that any of the  below pertain to dev jobs or that all the dev jobs have been found (c'mon).
     %h5 *Search parameters emphasize junior ruby/rails roles
-    %h5.mobile-no-show *Below are the most recent 300 of all results (an archive listing of all is forthcoming), and favors results from following over those from searching.
+    %h5.mobile-no-show *Below are the most recent 300 of all results (an archive listing of all in the database is forthcoming).
     #color-key
       %h3 Color Key
       #color-key-junior.color-key-div
