Tweak musings styling.

--- a/app/assets/stylesheets/tweets.css.scss
+++ b/app/assets/stylesheets/tweets.css.scss
@@ -82,7 +82,7 @@
       font-weight: bold;
       text-align: center;
     }
-    .tweet-text, .musing-text {
+    .tweet-text, .musing-title {
       @include media($mobile-screen) {
         display: inline;
       }
@@ -104,6 +104,9 @@
           color: $base-link-color;
           font-style: normal;
           font-size: $base-font-size * 1.5;
+          &.musing-age {
+            color: $musing-text-color;
+          }
         }
       }
     }
