Remove unnecessary code from application layout; rename filters_container css file.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,6 +17,6 @@
 @import 'neat';
 @import 'general';
 @import 'tweets';
-@import 'filter_container';
+@import 'filters_container';
 @import 'header';
 @import 'footer';
