Refactor index styling; beging styling archive and to make responsive additions.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,5 +18,7 @@
 @import 'general';
 @import 'tweets';
 @import 'filters_container';
-@import 'header';
+@import 'index_header';
+@import 'archive_header';
+@import 'color_key';
 @import 'footer';
