--- a/app/assets/stylesheets/bitters/_variables.scss
+++ b/app/assets/stylesheets/bitters/_variables.scss
@@ -6,7 +6,9 @@ $serif: $georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
 $headline-font-family: 'Arvo', $sans-serif;
-$subheadline-font-family: 'Carrois Gothic', $sans-serif; 
+$subheadline-font-family: 'Carrois Gothic', $sans-serif;
+$headline-font-size: 35px;
+$color-key-font-size: 20px;
 
 // Sizes
 ///////////////////////////////////////////////////////////////////////////////
