--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -1,3 +1,8 @@
 body {
   background-color: $base-body-color;
+  .mobile-no-show {
+    @include media($large-screen-down) {
+      display: none;
+    }
+  }
 }
