--- a/app/assets/stylesheets/index_header.css.scss
+++ b/app/assets/stylesheets/index_header.css.scss
@@ -1,4 +1,4 @@
-#header {
+#index-header {
   @include span-columns(12);
   @include row(table);
   #headline {
@@ -63,7 +63,7 @@
         border-radius: 10px;
         background-color: #FFF;
         font-family: $headline-font-family;
-        font-size: 35px;
+        font-size: $headline-font-size;
         color: $headline-color;
         line-height: 1;
         text-align: left;
@@ -82,63 +82,9 @@
       @include media($mobile-screen) {
         margin-left: $header-margin-mobile;
       }
-      &.mobile-no-show {
-        @include media($large-screen-down) {
-          display: none;
-        }
-      }
-    }
-    span {
-      font-size: 20px;
     }
     h3 {
       margin-bottom: 10px;
-    }
-    #color-key {
-      margin-top: 20px;
-      margin-left: $header-margin;
-      @include media($mobile-screen) {
-        margin-left: $header-margin-mobile;
-        .color-key-break {
-          display: none;
-        }
-      }
-      .color-key-div {
-        display: inline;
-        @include media($mobile-screen) {
-          display: block;
-        }
-        .color-div {
-          display: inline-block;
-          width: 20px;
-          height: 20px;
-          vertical-align: top;
-          &#musing {
-            background-color: $musing-color;
-          }
-          &#junior {
-            background-color: $junior-color;
-          }
-          &#by-friend-1 {
-            background-color: $by-friend-1-color;
-          }
-          &#by-friend-2 {
-            background-color: $by-friend-2-color;
-          }
-          &#by-friend-3 {
-            background-color: $by-friend-3-color;
-          }
-          &#by-stranger-3 {
-            background-color: $by-stranger-3-color;
-          }
-          &#by-stranger-2 {
-            background-color: $by-stranger-2-color;
-          }
-          &#by-stranger-1 {
-            background-color: $by-stranger-1-color;
-          }
-        }
-      }
     }
     #filters-container {
       margin-left: $header-margin;
