--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,4 +1,4 @@
-#header
+#index-header
   #headline
     #headline-hex
       #title
@@ -17,7 +17,7 @@
     %h5.mobile-no-show *No guarantee that any of the  below pertain to dev jobs or that all the dev jobs have been found (c'mon).
     %h5 *Search parameters emphasize junior ruby/rails roles
     %h5.mobile-no-show *Below are the most recent 300 of all results (an archive listing of all in the database is forthcoming).
-    #color-key
+    #index-color-key
       %h3 Color Key
       #color-key-junior.color-key-div
         .color-div#junior
