Rename css files and tweets-container to index-container in index view.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,9 +16,10 @@
 @import 'bitters/bitters';
 @import 'neat';
 @import 'general';
-@import 'tweets';
+@import 'index_container';
 @import 'filters_container';
 @import 'index_header';
 @import 'archive_header';
 @import 'color_key';
+@import 'archive_container';
 @import 'footer';
