--- a/app/views/home/_archive_musing.html.haml
+++ b/app/views/home/_archive_musing.html.haml
@@ -3,7 +3,7 @@
 .post-listing-cell.post-handle
   = musing_company_url(musing.company_name)
 .post-listing-cell.post-text
-  = musing.title
+  = musing_hiring_statement(musing)
 .post-listing-cell.apply-link
   = musing_apply_link_statement(musing.apply_link)
 .post-listing-cell.post-age{data: {"source-created-at" => musing.muse_created_at }}
