--- a/app/assets/stylesheets/archive_container.css.scss
+++ b/app/assets/stylesheets/archive_container.css.scss
@@ -1,11 +1,15 @@
 #archive-container {
-  margin-left: 75px;
-  margin-right: 75px;
-  font-size: $base-font-size;
+  @include span-columns(12);
+  padding-left: 75px;
+  padding-right: 75px;
+  font-size: $base-font-size * 1.2;
+  line-height: $base-font-size * 1.7;
   @include media($large-screen-down) {
-    margin: 0 10px 0px 10px;
+    padding: 0 10px 0px 10px;
   }
   .post-listing {
+    @include span-columns(12 of 12);
+    @include row(table);
     &.musing {
       background-color: $musing-color;
     }
@@ -32,6 +36,24 @@
     }
     .post-listing-cell {
       display: inline;
+      &.source-logo {
+        @include span-columns(1 of 12);
+      }
+      &.post-handle {
+        @include span-columns(2 of 12);
+      }
+      &.musing-post-text {
+        @include span-columns(6 of 12);
+      }
+      &.musing-post-apply-link {
+        @include span-columns(1 of 12);
+      }
+      &.tweet-post-text {
+        @include span-columns(7 of 12);
+      }
+      &.post-age {
+        @include span-columns(2 of 12);
+      }
     }
   }
 }
