--- a/app/views/home/_archive_musing.html.haml
+++ b/app/views/home/_archive_musing.html.haml
@@ -1,10 +1,10 @@
 .post-listing-cell.source-logo
-  = "M"
+  M
 .post-listing-cell.post-handle
   = musing_company_url(musing.company_name)
-.post-listing-cell.post-text
-  = musing_hiring_statement(musing)
-.post-listing-cell.apply-link
+.post-listing-cell.musing-post-text
+  = musing.title
+.post-listing-cell.musing-post-apply-link
   = musing_apply_link_statement(musing.apply_link)
 .post-listing-cell.post-age{data: {"source-created-at" => musing.muse_created_at }}
   = "#{time_ago_in_words(musing.muse_created_at)} old".capitalize
