--- a/app/views/home/_archive_tweet.html.haml
+++ b/app/views/home/_archive_tweet.html.haml
@@ -1,8 +1,8 @@
 .post-listing-cell.source-logo
-  = "T"
+  T
 .post-listing-cell.post-handle
   = link_to tweet.tweeter_handle, tweet.tweeter_url, target: "blank"
-.post-listing-cell.post-text
+.post-listing-cell.tweet-post-text
   = auto_link(tweet.text, html: {target: 'blank'})
 .post-listing-cell.post-age{data: {"source-created-at" => tweet.twitter_created_at }}
   = "#{time_ago_in_words(tweet.twitter_created_at)} old".capitalize
