--- a/app/views/home/_archive_tweet.html.haml
+++ b/app/views/home/_archive_tweet.html.haml
@@ -1,6 +1,6 @@
-.post-listing-cell.source-logo
+.post-listing-cell.source-logo.mobile-no-show
   T
-.post-listing-cell.post-handle
+.post-listing-cell.post-handle.mobile-no-show
   = link_to tweet.tweeter_handle, tweet.tweeter_url, target: "blank"
 .post-listing-cell.tweet-post-text
   = auto_link(tweet.text, html: {target: 'blank'})
