Add initial buttons for Isotope sorting; add hidden category div for sorting purposes and helper method for assigning tweet categories.

--- a/app/assets/stylesheets/archive_container.css.scss
+++ b/app/assets/stylesheets/archive_container.css.scss
@@ -42,6 +42,9 @@
     &.by-stranger-1 {
       background-color: $by-stranger-1-color;
     }
+    .post-category {
+      display: none;
+    }
     .post-listing-cell {
       display: inline;
       &.post-handle {
