--- a/app/views/home/_archive_musing.html.haml
+++ b/app/views/home/_archive_musing.html.haml
@@ -1,3 +1,5 @@
+.post-category
+  musing
 .post-listing-cell.post-handle
   = musing_company_url(musing.company_name)
 .post-listing-cell.musing-post-text
