--- a/app/views/home/_archive_tweet.html.haml
+++ b/app/views/home/_archive_tweet.html.haml
@@ -1,3 +1,5 @@
+.post-category
+  = archive_tweet_category(tweet)
 .post-listing-cell.post-handle.mobile-no-show
   = link_to tweet.tweeter_handle, tweet.tweeter_url, target: "blank"
 .post-listing-cell.tweet-post-text
