--- a/app/views/home/archive.html.haml
+++ b/app/views/home/archive.html.haml
@@ -41,7 +41,7 @@
       = link_to "Home", root_path, class: "special-link"
   #sort-buttons-container
     #sort-buttons.button-group
-      %button{id: "chronological", class: "is-checked", data: {"sort-value" => "original-order"}}
+      %button{id: "chronological", class: "active-button", data: {"sort-value" => "original-order"}}
         chronological
       %button{data: {"sort-value" => "post-category"}}
         category
