--- a/app/assets/stylesheets/archive_container.css.scss
+++ b/app/assets/stylesheets/archive_container.css.scss
@@ -1,5 +1,6 @@
 #archive-container {
-  @include span-columns(12);
+  /*@include span-columns(12);*/
+  max-width: 90%;
   padding-left: 75px;
   padding-right: 75px;
   font-size: $base-font-size * 1.2;
@@ -9,7 +10,7 @@
     font-size: $base-font-size * 1.2;
   }
   .post-listing {
-    @include span-columns(12 of 12);
+    @include span-columns(12);
     @include row(table);
     @include media($large-screen-down) {
       margin-bottom: 4px;
