Style sort buttons, including active coloring.

--- a/app/assets/stylesheets/archive_header.css.scss
+++ b/app/assets/stylesheets/archive_header.css.scss
@@ -21,4 +21,13 @@
       margin: 0 10px 10px 10px;
     }
   }
+  #sort-buttons-container {
+    margin-bottom: 20px;
+    @include media($large-screen-down) {
+      margin: 0 10px 10px 10px;
+    }
+    .active-button {
+      color: blue;
+    }
+  }
 }
