Hide archive sort buttons at sizes below desktop; tweak archive styling.

--- a/app/assets/stylesheets/archive_header.css.scss
+++ b/app/assets/stylesheets/archive_header.css.scss
@@ -24,7 +24,7 @@
   #sort-buttons-container {
     margin-bottom: 20px;
     @include media($large-screen-down) {
-      margin: 0 10px 10px 10px;
+      display: none;
     }
     .active-button {
       color: blue;
