--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -16,7 +16,7 @@
     %h5 *Updates from Twitter hourly and The Muse weekly.
     %h5.non-desktop-no-show *No guarantee that any of the  below pertain to dev jobs or that all the dev jobs have been found (c'mon).
     %h5 *Search parameters emphasize junior ruby/rails roles
-    %h5.non-desktop-no-show *Below are the most recent 300 of all results (an archive listing of all in the database is forthcoming).
+    %h5.non-desktop-no-show *Below are the most recent 300 (favoring followed/The Muse over searched) of all results.
     #index-color-key
       %h3 Color Key
       #color-key-junior.color-key-div
