Move junior text tweet view helper to TwitterApiHelper, make according changes elsewhere.

--- a/app/views/home/_index_musing.html.haml
+++ b/app/views/home/_index_musing.html.haml
@@ -1,4 +1,4 @@
-%div{class: "isotope-tweet tweet-hex-musing junior musing"}
+%div{class: "isotope-tweet tweet-hex-musing #{junior_class_if_junior(musing)} musing"}
   .tweet-contents
     .musing-company-logo
       = image_tag musing.company_logo
