Update index view to include link to archive view.

--- a/app/assets/stylesheets/general.css.scss
+++ b/app/assets/stylesheets/general.css.scss
@@ -5,6 +5,12 @@ body {
       display: none;
     }
   }
+  .non-desktop-only {
+    display: none;
+    @include media($large-screen-down) {
+      display: initial;
+    }
+  }
   .mobile-no-show {
     @include media($mobile-screen) {
       display: none;
