Fix error in displaying archive view link in mobile view.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,7 +22,8 @@
         (favoring followed/The Muse over searched) of all results. Visit the
         = link_to "Archive", archive_path, class: "special-link"
         for a sortable list of all results.
-    %h5.non-desktop-only = link_to "*Archive", archive_path, class: "special-link"
+    %h5.non-desktop-only
+      = link_to "*Archive", archive_path, class: "special-link"
     #index-color-key
       %h3 Color Key
       #color-key-junior.color-key-div
