Tweak archive link display.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -23,7 +23,8 @@
         = link_to "Archive", archive_path, class: "special-link"
         for a sortable list of all results.
     %h5.non-desktop-only
-      = link_to "*Archive", archive_path, class: "special-link"
+      *
+      = link_to "Archive", archive_path, class: "special-link"
     #index-color-key
       %h3 Color Key
       #color-key-junior.color-key-div
