Tweak index notices wording.

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,9 +17,9 @@
     %h5.non-desktop-no-show * No guarantee that any of the  below pertain to dev jobs or that all the dev jobs have been found (c'mon)
     %h5 * Search parameters emphasize junior ruby/rails roles
     %h5
-      * Below are the most recent 300
+      * Below are the most recent 300 results
       %span.non-desktop-no-show
-        (favoring followed/The Muse over searched) of all results. Visit the
+        (favoring followed/The Muse over searched). Visit the
         = link_to "Archive", archive_path, class: "special-link"
         for a sortable list of all results.
     %h5.non-desktop-only
