Reduce retention of tweets from friends to 2 weeks.

--- a/app/views/home/archive.html.haml
+++ b/app/views/home/archive.html.haml
@@ -32,7 +32,7 @@
     %p.mobile-no-show
       = "There are #{number_with_delimiter(@posts.count, :delimiter => ',')} jobs (?) listed below: #{@juniors_count} for juniors (tweets and The Muse), #{@friends_count} from following, #{@strangers_count} from searching, and #{@musings_count} from The Muse."
     %p.mobile-no-show
-      Those from searching are deleted once a week old, from following are deleted once a month old, and from The Muse are deleted once three months old.
+      Those from searching are deleted once a week old, from following are deleted once two weeks old, and from The Muse are deleted once three months old.
     %p.mobile-no-show
       For a filterable listing, visit the 
       = link_to "home", root_path, class: "special-link"
